--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,14 @@
 <head>
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'> -->
-  <!-- <title>Clear View Escapes</title>
+  <title>Centrum Sztuki w Oławie</title>
+  <!-- 
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes, affordable travel">
   <meta name="description" content="Your clarify. One trip away. We create soul restoring journeys that inspire you to be you."> -->
   <link rel="stylesheet" type="text/css" href="temp/styles/styles.css">
 </head>
 <body>
-Teściki
+<div class="test">Teściki</div>
+<script src="/temp/scripts/App.js"></script>
 </body>
 </html>
