- Instalacja gulp-modernizr (dodanie pliku Vendor.js) i konfiguracja. Dodanie zadania modernizr do gulp, które generuje plik modernizr.js. Dodanie do zadania scripts zależności zadania modernizr - tak aby plik był generowany za każdym razem, kiedy zmieniany jest jakiś plik .js. Działa dodawanie klasy dla flexbox (dla grid nie) - Dodanie w zadaniu scripts wyświetlania błędów z plików js.

--- a/app/index.html
+++ b/app/index.html
@@ -9,9 +9,19 @@
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes, affordable travel">
   <meta name="description" content="Your clarify. One trip away. We create soul restoring journeys that inspire you to be you."> -->
   <link rel="stylesheet" type="text/css" href="temp/styles/styles.css">
+  <script src="/temp/scripts/Vendor.js"></script>
 </head>
 <body>
-<div class="test">Teściki</div>
+
+<!-- TEST -->
+<div class="flexbox">
+	<div class="test">1</div>
+	<div class="test">2</div>
+	<div class="test">3</div>
+	<div class="test">4</div>
+</div>
+
+
 <script src="/temp/scripts/App.js"></script>
 </body>
 </html>
