--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <!-- TEST -->
-<div class="flexbox">
+<div class="cssgrid">
 	<div class="test">1</div>
 	<div class="test">2</div>
 	<div class="test">3</div>
