Podstawowa struktura html

--- a/app/index.html
+++ b/app/index.html
@@ -4,23 +4,35 @@
 <head>
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'> -->
-  <title>Centrum Sztuki w Oławie</title>
+  <title>Kino Odra w Oławie</title>
   <!-- 
-  <meta name="keywords" content="Travel planning, travel bundles, travel escapes, affordable travel">
-  <meta name="description" content="Your clarify. One trip away. We create soul restoring journeys that inspire you to be you."> -->
+  <meta name="keywords" content="">
+  <meta name="description" content=""> -->
   <link rel="stylesheet" type="text/css" href="temp/styles/styles.css">
   <script src="/temp/scripts/Vendor.js"></script>
 </head>
 <body>
 
-<!-- TEST -->
-<div class="cssgrid">
-	<div class="test">1</div>
-	<div class="test">2</div>
-	<div class="test">3</div>
-	<div class="test">4</div>
-</div>
+<header>
+  <h1>Kino Odra w Oławie</h1>
+</header>
 
+<section class="repertuar">
+  <h1>Repertuar kina</h1>
+</section>
+
+<section class="promocje">
+  <h1>Promocje kinowe</h1>
+</section>
+<!-- Cennik -->
+
+<section class="cennik">
+  <h1>Cennik</h1>
+</section>
+
+<footer>
+  <h1>Kontakt</h1>
+</footer>
 
 <script src="/temp/scripts/App.js"></script>
 </body>
