--- a/app/index.html
+++ b/app/index.html
@@ -13,16 +13,18 @@
 </head>
 <body>
 
-<header>
-  <h1>Kino Odra w Oławie</h1>
-  <nav>
+<div class="pageContainer">
+
+<header class="header">
+  <h1 class="header__heading">Kino Odra w Oławie</h1>
+  <nav class="navigation">
     <ul>
-      <li><a href="#">Repertuar</a></li>
-      <li><a href="#">Filmy</a></li>
-      <li><a href="#">Promocje</a></li>
-      <li><a href="#">Cennik</a></li>
-      <li><a href="#">Kontakt</a></li>
-      <li><a href="#">Centrum Sztuki</a></li>
+      <li class="navigation__element"><a href="#">Repertuar</a></li>
+      <li class="navigation__element"><a href="#">Filmy</a></li>
+      <li class="navigation__element"><a href="#">Promocje</a></li>
+      <li class="navigation__element"><a href="#">Cennik</a></li>
+      <li class="navigation__element"><a href="#">Kontakt</a></li>
+      <li class="navigation__element"><a href="#">Centrum Sztuki</a></li>
     </ul>
   </nav>
 </header>
@@ -174,11 +176,11 @@
     <h1>Repertuar na 2017-09-07</h1>
   </article>
 
-  <section>
+</section>
+
+<section>
     <!-- Aktualnie i wkrótce w kinie -->
   </section>
-
-</section>
 
 <section class="promocje">
   <h1>Promocje kinowe</h1>
@@ -188,9 +190,15 @@
   <h1>Cennik</h1>
 </section>
 
-<footer>
+<aside class="zobaczCS">
+  <a href="#" class="zobaczCS__link">Zobacz wydarzenia kulturalne Centrum Sztuki</a>
+</aside>
+
+<footer class="footer">
   <h1>Kontakt</h1>
 </footer>
+
+</div>
 
 <script src="/temp/scripts/App.js"></script>
 </body>
