Stylizowanie headera - inProgress

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'> -->
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,600" rel="stylesheet" type="text/css">
   <title>Kino Odra w Oławie</title>
   <!-- 
   <meta name="keywords" content="">
@@ -15,21 +16,22 @@
 
 <div class="pageContainer">
 
-<header class="header">
-  <h1 class="header__heading">Kino Odra w Oławie</h1>
-  <nav class="navigation">
+<header class="site-header wrapper">
+  <h1 class="site-header__heading site-header__heading--initUkryte">Kino Odra w Oławie</h1>
+  <img class="site-header__logo" src="/assets/images/logo_kino_odra.png" alt="Logo Kina Odra w Oławie">
+  <nav class="primary-nav">
     <ul>
-      <li class="navigation__element"><a href="#">Repertuar</a></li>
-      <li class="navigation__element"><a href="#">Filmy</a></li>
-      <li class="navigation__element"><a href="#">Promocje</a></li>
-      <li class="navigation__element"><a href="#">Cennik</a></li>
-      <li class="navigation__element"><a href="#">Kontakt</a></li>
-      <li class="navigation__element"><a href="#">Centrum Sztuki</a></li>
+      <li class="primary-nav__element"><a href="#">Repertuar</a></li>
+      <li class="primary-nav__element"><a href="#">Filmy</a></li>
+      <li class="primary-nav__element"><a href="#">Promocje</a></li>
+      <li class="primary-nav__element"><a href="#">Cennik</a></li>
+      <li class="primary-nav__element"><a href="#">Kontakt</a></li>
+      <li class="primary-nav__element btn--nav"><a href="#">Centrum Sztuki</a></li>
     </ul>
   </nav>
 </header>
 
-<section class="repertuar">
+<section class="repertuar wrapper">
   <h1>Repertuar kina</h1>
   <nav>
     <ul>
@@ -185,11 +187,11 @@
     <!-- Aktualnie i wkrótce w kinie -->
   </section>
 
-<section class="promocje">
+<section class="promocje wrapper">
   <h1>Promocje kinowe</h1>
 </section>
 
-<section class="cennik">
+<section class="cennik wrapper">
   <h1>Cennik</h1>
 </section>
 
@@ -197,7 +199,7 @@
   <a href="#" class="zobaczCS__link">Zobacz wydarzenia kulturalne Centrum Sztuki</a>
 </aside>
 
-<footer class="footer">
+<footer class="footer wrapper">
   <h1>Kontakt</h1>
 </footer>
 
