Bardzo wstepne ostylowanie headera

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
       <li class="primary-nav__element"><a href="#">Promocje</a></li>
       <li class="primary-nav__element"><a href="#">Cennik</a></li>
       <li class="primary-nav__element"><a href="#">Kontakt</a></li>
-      <li class="primary-nav__element btn--nav"><a href="#">Centrum Sztuki</a></li>
+      <li class="primary-nav__element btn btn--nav"><a href="#">Centrum Sztuki</a></li>
     </ul>
   </nav>
 </header>
