Dodano odnosniki dla calego miesiaca do nawigacji dni repertuaru

--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,29 @@
       <li><a href="#">2017-09-05</a></li>
       <li><a href="#">2017-09-06</a></li>
       <li><a href="#">2017-09-07</a></li>
+      <li><a href="#">2017-09-08</a></li>
+      <li><a href="#">2017-09-09</a></li>
+      <li><a href="#">2017-09-10</a></li>
+      <li><a href="#">2017-09-11</a></li>
+      <li><a href="#">2017-09-12</a></li>
+      <li><a href="#">2017-09-13</a></li>
+      <li><a href="#">2017-09-14</a></li>
+      <li><a href="#">2017-09-15</a></li>
+      <li><a href="#">2017-09-16</a></li>
+      <li><a href="#">2017-09-17</a></li>
+      <li><a href="#">2017-09-18</a></li>
+      <li><a href="#">2017-09-19</a></li>
+      <li><a href="#">2017-09-20</a></li>
+      <li><a href="#">2017-09-21</a></li>
+      <li><a href="#">2017-09-22</a></li>
+      <li><a href="#">2017-09-23</a></li>
+      <li><a href="#">2017-09-24</a></li>
+      <li><a href="#">2017-09-25</a></li>
+      <li><a href="#">2017-09-26</a></li>
+      <li><a href="#">2017-09-27</a></li>
+      <li><a href="#">2017-09-28</a></li>
+      <li><a href="#">2017-09-29</a></li>
+      <li><a href="#">2017-09-30</a></li>
     </ul>
   </nav>
 
