Skopiowanie filmow - projekcji na 2 wrzesnia

--- a/app/index.html
+++ b/app/index.html
@@ -182,6 +182,114 @@
 
   <article class="repertuarDnia repertuarDnia--initUkryty">
     <h1 class="repertuarDnia__heading">Repertuar na 2017-09-02</h1>
+
+    <!-- O czym szumi las -->
+    <section class="filmBox">
+      <h2 class="filmBox__tytul">O czym szumi las</h2>
+      <img class="filmBox__plakat" src="/assets/images/moviesImages/oCzymSzumiLas.jpg" alt="Plakat filmu - O czym szumi las.">
+      <p class="filmBox__info"><span class="filmBox__etykieta--ukryte">Czas trwania: </span>75 min</p>
+      <p class="filmBox__info"><span class="filmBox__etykieta--ukryte">Kategoria wiekowa: </span>b/o</p>
+      <p class="filmBox__info"><span class="filmBox__etykieta--ukryte">Gatunek: </span>Animowany | Familijny</p>
+      
+      <div class="filmBox__seanseDnia">
+        <p>Seanse w dniu 1 wrz:</p>
+        <a class="btn btn--seans">
+          2D dubbing 16:00
+        </a>
+
+
+        <a class="btn btn--seans">
+          3D dubbing 18:00
+        </a>
+      </div>
+
+      <a href="#" class="btn filmBox__zobaczWszystkie">Zobacz wszystkie seanse</a>
+      <div class="filmBox__wszystkieSeanse filmBox__wszystkieSeanse--initUkryty">
+        <h3>Seanse w dniu 1 wrz:</h3>
+        <a class="btn btn--seans">
+          2D dubbing 16:00
+        </a>
+
+        <a class="btn btn--seans">
+          3D dubbing 18:00
+        </a>
+
+        <h3>Seanse w dniu 2 wrz:</h3>
+        <a class="btn btn--seans">
+          2D dubbing 16:00
+        </a>
+
+      </div>
+    </section>
+
+    <!-- Anabelle -->
+    <section class="filmBox">
+      <h2 class="filmBox__tytul">Anabelle: Narodziny zła</h2>
+      <img class="filmBox__plakat" src="/assets/images/moviesImages/anabelle.jpg" alt="Plakat filmu - Anabelle: Narodziny zła.">
+      <p class="filmBox__info"><span class="filmBox__etykieta--ukrytefilmBox__etykieta--ukryte">Czas trwania: </span>109 min</p>
+      <p class="filmBox__info"><span class="filmBox__etykieta--ukrytefilmBox__etykieta--ukryte">Kategoria wiekowa: </span>od 15 lat</p>
+      <p class="filmBox__info"><span class="filmBox__etykieta--ukrytefilmBox__etykieta--ukryte">Gatunek: </span>Horror</p>
+
+      <p>Seanse w dniu 1 wrz:</p>
+      <a class="btn btn--seans">
+        2D napisy 19:30
+      </a>
+
+      <a class="btn btn--seans">
+        3D dubbing 22:00
+      </a>
+
+      <a href="#" class="btn filmBox__zobaczWszystkie">Zobacz wszystkie seanse</a>
+      <div class="filmBox__wszystkieSeanse filmBox__wszystkieSeanse--initUkryty">
+        <h3>Seanse w dniu 1 wrz:</h3>
+        <a class="btn btn--seans">
+          2D napisy 19:30
+        </a>
+
+        <a class="btn btn--seans">
+          3D dubbing 22:00
+        </a>
+
+        <h3>Seanse w dniu 2 wrz:</h3>
+        <a class="btn btn--seans">
+          2D dubbing 18:00
+        </a>
+
+      </div>
+    </section>
+
+    <!-- Bodyguard -->
+    <section class="filmBox">
+      <h2 class="filmBox__tytul">Bodyguard Zawodowiec</h2>
+      <img class="filmBox__plakat" src="/assets/images/moviesImages/bodyguardZawodowiec.jpg" alt="Plakat filmu - Bodyguard Zawodowiec.">
+      <p class="filmBox__info"><span class="filmBox__etykieta--ukryte">Czas trwania: </span>118 min</p>
+      <p class="filmBox__info"><span class="filmBox__etykieta--ukryte">Kategoria wiekowa: </span>od 15 lat</p>
+      <p class="filmBox__info"><span class="filmBox__etykieta--ukryte">Gatunek: </span>Akcja | Komedia</p>
+
+      <p>Seanse w dniu 1 wrz:</p>
+      <a class="btn btn--seans">
+        2D napisy 11:15
+      </a>
+
+      <a href="#" class="btn filmBox__zobaczWszystkie">Zobacz wszystkie seanse</a>
+      <div class="filmBox__wszystkieSeanse filmBox__wszystkieSeanse--initUkryty">
+        <h3>Seanse w dniu 1 wrz:</h3>
+        <a class="btn btn--seans">
+          2D napisy 11:15
+        </a>
+
+        <a class="btn btn--seans">
+          3D dubbing 17:00
+        </a>
+
+        <h3>Seanse w dniu 2 wrz:</h3>
+        <a class="btn btn--seans">
+          2D dubbing 20:45
+        </a>
+
+      </div>
+    </section>
+
   </article>
 
   <article class="repertuarDnia repertuarDnia--initUkryty">
