--- a/*struktura.html
+++ b/*struktura.html
@@ -33,6 +33,41 @@
 		<h1 class="movieSchedule__ofDay__heading">Repertuar na YYYY-MM-DD</h1>
 		<section class="movieBox">
 			<!-- Box dla filmu na konkretny dzień -->
+
+	      <h2 class="movieBox__tytul">Tytuł filmu</h2>
+	      <img class="movieBox__plakat" src=sciezka_do_plakatu >
+	      <p class="movieBox__info"><span class="movieBox__etykieta--ukrytemovieBox__etykieta--ukryte">Czas trwania: </span>XXX min</p>
+	      <p class="movieBox__info"><span class="movieBox__etykieta--ukrytemovieBox__etykieta--ukryte">Kategoria wiekowa: </span>od XX lat</p>
+	      <p class="movieBox__info"><span class="movieBox__etykieta--ukrytemovieBox__etykieta--ukryte">Gatunek: </span>Horror</p>
+			
+		  <!-- Przyciski seansów danego filmu w danym dniu -->
+	      <p>Seanse w dniu 1 wrz:</p>
+	      <buton class="btn btn--seans">
+	        2D napisy 19:30
+	      </buton>
+
+	      <buton class="btn btn--seans">
+	        3D dubbing 22:00
+	      </buton>
+
+	      <button href="#" class="btn movieBox__zobaczWszystkie">Zobacz wszystkie seanse</button>
+	      <!-- <div class="movieBox__wszystkieSeanse movieBox__wszystkieSeanse--initUkryty">
+	        <h3>Seanse w dniu 1 wrz:</h3>
+	        <button class="btn btn--seans">
+	          2D napisy 19:30
+	        </button>
+
+	        <button class="btn btn--seans">
+	          3D dubbing 22:00
+	        </button>
+
+	        <h3>Seanse w dniu 2 wrz:</h3>
+	        <button class="btn btn--seans">
+	          2D dubbing 18:00
+	        </button>
+
+	      </div> -->
+    
 		</section>
 	</article>
 
