--- a/*struktura.html
+++ b/*struktura.html
@@ -34,38 +34,38 @@
 		<section class="movieBox">
 			<!-- Box dla filmu na konkretny dzień -->
 
-				<h2 class="movieBox__tytul">Tytuł filmu</h2>
+				<h2 class="movieBox__title">Tytuł filmu</h2>
 				<button class="movieBox__aboutBtn btn btn--aboutMovie">O filmie</button>
-				<img class="movieBox__plakat" src=sciezka_do_plakatu >
+				<img class="movieBox__poster" src=sciezka_do_plakatu alt="Platak do filmu - %%tytul%%">
 				<span class="movieBox__movieLabel"></span> <!-- może ich być więcej niż jedna -->
-	      <p class="movieBox__info"><span class="movieBox__etykieta--ukrytemovieBox__etykieta--ukryte">Czas trwania: </span>XXX min</p>
-	      <p class="movieBox__info"><span class="movieBox__etykieta--ukrytemovieBox__etykieta--ukryte">Kategoria wiekowa: </span>od XX lat</p>
-	      <p class="movieBox__info"><span class="movieBox__etykieta--ukrytemovieBox__etykieta--ukryte">Gatunek: </span>Horror</p>
+	      <p class="movieBox__info"><span class="movieBox__lbl--hidden">Czas trwania: </span>XXX min</p>
+	      <p class="movieBox__info"><span class="movieBox__lbl--hidden">Kategoria wiekowa: </span>od XX lat</p>
+	      <p class="movieBox__info"><span class="movieBox__lbl--hidden">Gatunek: </span>Horror</p>
 			
 		  <!-- Przyciski seansów danego filmu w danym dniu -->
 				<p>Seanse w dniu 1 wrz:</p>
 				<span class="movieBox__pickProjectionLbl movieBox__pickProjectionLbl--hidden">Wybierz seans aby kupić/zarezerwować</span>
-	      <buton class="btn btn--seans">
+	      <buton class="btn btn--projection">
 	        2D napisy 19:30
 	      </buton>
 
-	      <buton class="btn btn--seans">
+	      <buton class="btn btn--projection">
 	        3D dubbing 22:00
 	      </buton>
 
-	      <button href="#" class="btn movieBox__zobaczWszystkie">Zobacz wszystkie seanse</button>
+	      <button href="#" class="btn movieBox__seeAllBtn">Zobacz wszystkie seanse</button>
 	      <!-- <div class="movieBox__wszystkieSeanse movieBox__wszystkieSeanse--initUkryty">
 	        <h3>Seanse w dniu 1 wrz:</h3>
-	        <button class="btn btn--seans">
+	        <button class="btn btn--projection">
 	          2D napisy 19:30
 	        </button>
 
-	        <button class="btn btn--seans">
+	        <button class="btn btn--projection">
 	          3D dubbing 22:00
 	        </button>
 
 	        <h3>Seanse w dniu 2 wrz:</h3>
-	        <button class="btn btn--seans">
+	        <button class="btn btn--projection">
 	          2D dubbing 18:00
 	        </button>
 
