Dodanie wyświetlania etykiet projekcji. Zmodyfikowano strukturę przycisku projekcji.

--- a/*struktura.html
+++ b/*struktura.html
@@ -46,12 +46,16 @@
 				<p>Seanse w dniu 1 wrz:</p>
 				<span class="movieBox__pickProjectionLbl movieBox__pickProjectionLbl--hidden">Wybierz seans aby kupić/zarezerwować</span>
 	      <buton class="btn btn--projection">
-	        2D napisy 19:30
+					<span class="btn--projection__hour">19:30</span>
+					<span class="btn--projection__info">2D napisy</span>
+					<span class="btn--projection__lbl">Kino Seniora</span> <!-- ewentualne wtykiety projekcji - może ich być więcej niż 1 -->
+					<span class="btn--projection__lbl">Etykieta 2</span> <!-- przykład drugiej etykiety -->
 	      </buton>
 
 	      <buton class="btn btn--projection">
-	        3D dubbing 22:00
-	      </buton>
+						<span class="btn--projection__hour">22:00</span>
+						<span class="btn--projection__info">3D dubbing</span>
+					</buton>
 
 	      <button href="#" class="btn movieBox__seeAllBtn">Zobacz wszystkie seanse</button>
 	      <!-- <div class="movieBox__wszystkieSeanse movieBox__wszystkieSeanse--initUkryty">
