Uaktualnione GenerateSchedule do poprawionej struktury movieBox (część - projekcje danego dnia)

--- a/*struktura.html
+++ b/*struktura.html
@@ -69,6 +69,8 @@
 
 					<button href="#" class="btn movieBox__seeAllBtn">Zobacz wszystkie seanse</button>
 				</section>
+
+				<!-- TEGO NA RAZIE NIE MA -->
 	      <!-- <div class="movieBox__allProjections movieBox__allProjections--initHidden">
 	        <h3>Seanse w dniu 1 wrz:</h3>
 	        <button class="btn btn--projection">
