Próba ostylowania movieBox i movieSchedule (przed próbną zmianą z grid na flex dla movieSchedule_ofDay

--- a/*struktura.html
+++ b/*struktura.html
@@ -35,7 +35,7 @@
 			<!-- Box dla filmu na konkretny dzień -->
 
 				<h2 class="movieBox__title">Tytuł filmu</h2>
-				<button class="movieBox__aboutBtn btn btn--aboutMovie">O filmie</button>
+				<button class="movieBox__aboutBtn btn btn--aboutMovie">O filmie</button> <!-- na razie ukryte stylami -->
 				<img class="movieBox__poster" src=sciezka_do_plakatu alt="Plakat filmu - %%tytul%%">
 				<span class="movieBox__movieLabel"></span> <!-- może ich być więcej niż jedna -->
 	      <p class="movieBox__info"><span class="movieBox__lbl--hidden">Czas trwania: </span>XXX min</p>
@@ -67,7 +67,7 @@
 
 					</ul>
 
-					<button href="#" class="btn movieBox__seeAllBtn">Zobacz wszystkie seanse</button>
+					<button href="#" class="btn movieBox__seeAllBtn">Zobacz wszystkie seanse</button> <!-- na razie ukryte stylami -->
 				</section>
 
 				<!-- TEGO NA RAZIE NIE MA -->
