Dodanie ukrywania nieaktywnych dni repertuaru oraz etykiet dnia za pomocą klasy visually-hidden (accessibility)

--- a/*struktura.html
+++ b/*struktura.html
@@ -29,8 +29,8 @@
 	
 	<!-- days' schedule -->
 	<article class="movieSchedule__ofDay" day="YYYY-MM-DD">
-	<!-- .movieSchedule__ofDay--hidden dla dni repertuaru ukrytych -->
-		<h1 class="movieSchedule__ofDay__heading">Repertuar na YYYY-MM-DD</h1>
+	<!-- visually-hidden dla dni repertuaru ukrytych -->
+		<h1 class="movieSchedule__ofDay__heading visually-hidden">Repertuar na YYYY-MM-DD</h1>
 		<section class="movieBox group">
 			<!-- Box dla filmu na konkretny dzień -->
 
@@ -45,7 +45,7 @@
 			<!-- Przyciski seansów danego filmu w danym dniu -->
 				<section class="movieBox__projections">
 					<header><h3 class="movieBox__projectionsHeading">Seanse w dniu 1 wrz:</h3></header>
-					<span class="movieBox__pickProjectionLbl movieBox__pickProjectionLbl--hidden">Wybierz seans aby kupić/zarezerwować</span>
+					<span class="movieBox__pickProjectionLbl movieBox__pickProjectionLbl--hidden">Wybierz seans aby kupić/zarezerwować</span> <!-- na razie ukryte stylami -->
 
 					<ul>
 
