--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
       <li class="primary-nav__element btn btn--nav"><a href="#">Centrum Sztuki</a></li>
     </ul>
   </nav>
-</header>
+</header> 
 
 <section class="movieSchedule wrapper">
   <h1>Repertuar kina</h1>
@@ -128,22 +128,22 @@
   <!-- Repertuar poszczególnych dni -->
   <!-- Poszczególne filmy w dniach wypełniane są danymi testowymi w module GenerateSchedule.js -->
   <article class="movieSchedule__ofDay" day="2017-09-01">
-    <h1 class="movieSchedule__ofDay__heading">Repertuar na 2017-09-01 (piątek)</h1>
+    <h1 class="movieSchedule__ofDay__heading visually-hidden">Repertuar na 2017-09-01 (piątek)</h1>
   </article>
-  <article class="movieSchedule__ofDay movieSchedule__ofDay--hidden"  day="2017-09-02">
-    <h1 class="movieSchedule__ofDay__heading">Repertuar na 2017-09-02 (sobota)</h1>
+  <article class="movieSchedule__ofDay visually-hidden"  day="2017-09-02">
+    <h1 class="movieSchedule__ofDay__heading visually-hidden">Repertuar na 2017-09-02 (sobota)</h1>
   </article>
-  <article class="movieSchedule__ofDay movieSchedule__ofDay--hidden"  day="2017-09-03">
-    <h1 class="movieSchedule__ofDay__heading">Repertuar na 2017-09-03 (niedziela)</h1>
+  <article class="movieSchedule__ofDay visually-hidden"  day="2017-09-03">
+    <h1 class="movieSchedule__ofDay__heading visually-hidden">Repertuar na 2017-09-03 (niedziela)</h1>
   </article>
-  <article class="movieSchedule__ofDay movieSchedule__ofDay--hidden" day="2017-09-05">
-    <h1 class="movieSchedule__ofDay__heading">Repertuar na 2017-09-05 (wtorek)</h1>
+  <article class="movieSchedule__ofDay visually-hidden" day="2017-09-05">
+    <h1 class="movieSchedule__ofDay__heading visually-hidden">Repertuar na 2017-09-05 (wtorek)</h1>
   </article>
-  <article class="movieSchedule__ofDay movieSchedule__ofDay--hidden" day="2017-09-06">
-    <h1 class="movieSchedule__ofDay__heading">Repertuar na 2017-09-06 (środa)</h1>
+  <article class="movieSchedule__ofDay visually-hidden" day="2017-09-06">
+    <h1 class="movieSchedule__ofDay__heading visually-hidden">Repertuar na 2017-09-06 (środa)</h1>
   </article> 
-  <article class="movieSchedule__ofDay movieSchedule__ofDay--hidden" day="2017-09-07">
-    <h1 class="movieSchedule__ofDay__heading">Repertuar na 2017-09-07 (czwartek)</h1>
+  <article class="movieSchedule__ofDay visually-hidden" day="2017-09-07">
+    <h1 class="movieSchedule__ofDay__heading visually-hidden">Repertuar na 2017-09-07 (czwartek)</h1>
   </article>
 
 </section>
