Wyświetlanie (jeśli jest) etykiety seansu (tylko jednej) W przeciwnym wypadku placeholdera, który jest wizualnie ukrywany, ale ma "zajmować miejsce"

--- a/*struktura.html
+++ b/*struktura.html
@@ -51,15 +51,16 @@
 
 						<li>
 						<buton class="btn btn--projection">
+								<span class="btn--projection__lbl">Kino Seniora</span> <!-- ewentualne wtykiety projekcji - może ich być więcej niż 1 -->
+								<!-- <span class="btn--projection__lbl">Etykieta 2</span> przykład drugiej etykiety - WYŚwietlana jest tylko jedna etykieta projekcji-->
 							<span class="btn--projection__hour">19:30</span>
 							<span class="btn--projection__info">2D napisy</span>
-							<span class="btn--projection__lbl">Kino Seniora</span> <!-- ewentualne wtykiety projekcji - może ich być więcej niż 1 -->
-							<span class="btn--projection__lbl">Etykieta 2</span> <!-- przykład drugiej etykiety -->
 						</buton>
 						</li>
 
 						<li>
 						<buton class="btn btn--projection">
+							<span class="btn-projection__noLbl">projekcjs</span> <!-- jeśli nie ma etykiety -->
 							<span class="btn--projection__hour">22:00</span>
 							<span class="btn--projection__info">3D dubbing</span>
 						</buton>
