Działające wstępne ostylowanie responsywnej tabeli cennika

--- a/app/index.html
+++ b/app/index.html
@@ -158,6 +158,78 @@
 
 <section class="cennik wrapper">
   <h1>Cennik</h1>
+
+  <!-- Responsywna tabela cennika 2D -->
+<div class="rTable rTable--3cols rTable--collapse">
+
+  <!-- cennik wt-czw (--firstRegion - co oznacza, że 'podkolumna' --label NIE będzie w nim znikać na szerokim ekranie  -->
+    <div style="order: 1" class="rTable__cell rTable__cell--firstRegion rTable__cell--head">
+      <div class="rTable__subcell rTable__subcell--label rTable__subcell--empty"></div>
+      <div class="rTable__subcell rTable__subcell--value"><h3>wt, czw</h3></div>
+    </div>
+    <div style="order: 2" class="rTable__cell rTable__cell--firstRegion">
+      <div class="rTable__subcell rTable__subcell--label">normalny</div>
+      <div class="rTable__subcell rTable__subcell--value">16zł</div>
+    </div>
+    <div style="order: 3" class="rTable__cell rTable__cell--firstRegion">
+      <div class="rTable__subcell rTable__subcell--label">ulgowy</div>
+      <div class="rTable__subcell rTable__subcell--value">13zł</div>
+    </div>
+    <div style="order: 4" class="rTable__cell rTable__cell--firstRegion">
+      <div class="rTable__subcell rTable__subcell--label">rodzinny</div>
+      <div class="rTable__subcell rTable__subcell--value">13zł</div>
+    </div>
+    <div style="order: 5" class="rTable__cell rTable__cell--firstRegion rTable__cell--foot">
+      <div class="rTable__subcell rTable__subcell--label">grupowy</div>
+      <div class="rTable__subcell rTable__subcell--value">12zł</div>
+    </div>
+
+  <!-- cennik tania środa (--otherRegion - co oznacza, że 'podkolumna' --label będzie w nim znikać na szerokim ekranie  -->
+    <div style="order: 1" class="rTable__cell rTable__cell--otherRegion rTable__cell--head">
+      <div class="rTable__subcell rTable__subcell--label rTable__subcell--hideBig rTable__subcell--empty"></div>
+      <div class="rTable__subcell rTable__subcell--value"><h3>tania środa</h3></div>
+    </div>
+    <div style="order: 2" class="rTable__cell rTable__cell--otherRegion">
+      <div class="rTable__subcell rTable__subcell--label rTable__subcell--hideBig">normalny</div>
+      <div class="rTable__subcell rTable__subcell--value">11zł</div>
+    </div>
+    <div style="order: 3" class="rTable__cell rTable__cell--otherRegion">
+      <div class="rTable__subcell rTable__subcell--label rTable__subcell--hideBig">ulgowy</div>
+      <div class="rTable__subcell rTable__subcell--value">11zł</div>
+    </div>
+    <div style="order: 4" class="rTable__cell rTable__cell--otherRegion">
+      <div class="rTable__subcell rTable__subcell--label rTable__subcell--hideBig">rodzinny</div>
+      <div class="rTable__subcell rTable__subcell--value">11zł</div>
+    </div>
+    <div style="order: 5" class="rTable__cell rTable__cell--otherRegion rTable__cell--foot">
+      <div class="rTable__subcell rTable__subcell--label rTable__subcell--hideBig">grupowy</div>
+      <div class="rTable__subcell rTable__subcell--value">11zł</div>
+    </div>
+
+  <!-- cennik weekendy i święta (--otherRegion - co oznacza, że 'podkolumna' --label będzie w nim znikać na szerokim ekranie  -->
+    <div style="order: 1" class="rTable__cell rTable__cell--otherRegion rTable__cell--head">
+      <div class="rTable__subcell rTable__subcell--label rTable__subcell--hideBig rTable__subcell--empty"></div>
+      <div class="rTable__subcell rTable__subcell--value"><h3>pt-nd, święta</h3></div>
+    </div>
+    <div style="order: 2" class="rTable__cell rTable__cell--otherRegion">
+      <div class="rTable__subcell rTable__subcell--label rTable__subcell--hideBig">normalny</div>
+      <div class="rTable__subcell rTable__subcell--value">18zł</div>
+    </div>
+    <div style="order: 3" class="rTable__cell rTable__cell--otherRegion">
+      <div class="rTable__subcell rTable__subcell--label rTable__subcell--hideBig">ulgowy</div>
+      <div class="rTable__subcell rTable__subcell--value">15zł</div>
+    </div>
+    <div style="order: 4" class="rTable__cell rTable__cell--otherRegion">
+      <div class="rTable__subcell rTable__subcell--label rTable__subcell--hideBig">rodzinny</div>
+      <div class="rTable__subcell rTable__subcell--value">15zł</div>
+    </div>
+    <div style="order: 5" class="rTable__cell rTable__cell--otherRegion rTable__cell--foot">
+      <div class="rTable__subcell rTable__subcell--label rTable__subcell--hideBig">grupowy</div>
+      <div class="rTable__subcell rTable__subcell--value">14zł</div>
+    </div>
+
+</div>
+  
 </section>
 
 <aside class="zobaczCS">
