Wyśrodkowanie slickCarousel dla movies - dodanie do nich etykiet

--- a/app/index.html
+++ b/app/index.html
@@ -159,20 +159,20 @@
 
 </section>
 
-<section class="filmy wrapper">
+<section class="movies wrapper">
     <!-- Aktualnie i wkrótce w kinie -->
     <h1>Filmy</h1>
-    <div class="slickCarousel--filmy">
-      <div class="slickCarousel--filmy__el"><img class="slickCarousel--filmy__img" src="./assets/images/moviesImages/to.jpg" alt="Plakat filmu 'To'"></div>
-      <div class="slickCarousel--filmy__el"><img class="slickCarousel--filmy__img" src="./assets/images/moviesImages/anabelle.jpg" alt="Plakat filmu 'Anabelle'"></div>
-      <div class="slickCarousel--filmy__el"><img class="slickCarousel--filmy__img" src="./assets/images/moviesImages/bodyguardZawodowiec.jpg" alt="Plakat filmu 'Bodyguard Zawodowiec'"></div>
-      <div class="slickCarousel--filmy__el"><img class="slickCarousel--filmy__img" src="./assets/images/moviesImages/fantastyczne-zwierzeta.jpg" alt="Plakat filmu 'Fantastyczne-zwierzeta'"></div>
-      <div class="slickCarousel--filmy__el"><img class="slickCarousel--filmy__img" src="./assets/images/moviesImages/gangWiewiora.jpg" alt="Plakat filmu 'Gang wiewióra'"></div>
-      <div class="slickCarousel--filmy__el"><img class="slickCarousel--filmy__img" src="./assets/images/moviesImages/lotr1.jpg" alt="Plakat filmu 'Łotr 1'"></div>
-      <div class="slickCarousel--filmy__el"><img class="slickCarousel--filmy__img" src="./assets/images/moviesImages/mamuskiWychodne.jpg" alt="Plakat filmu 'Mamuśki mają wychodne'"></div>
-      <div class="slickCarousel--filmy__el"><img class="slickCarousel--filmy__img" src="./assets/images/moviesImages/mother.jpg" alt="Plakat filmu 'Mother'"></div>
-      <div class="slickCarousel--filmy__el"><img class="slickCarousel--filmy__img" src="./assets/images/moviesImages/oCzymSzumiLas.jpg" alt="Plakat filmu 'O czym szumi las'"></div>
-      <div class="slickCarousel--filmy__el"><img class="slickCarousel--filmy__img" src="./assets/images/moviesImages/vaiana.jpg" alt="Plakat filmu 'Vaiana'"></div>
+    <div class="slickCarousel--movies">
+      <div class="slickCarousel--movies__el"><span class="label label--movies">Aktualnie</span><img class="slickCarousel--movies__img" src="./assets/images/moviesImages/to.jpg" alt="Plakat filmu 'To'"></div>
+      <div class="slickCarousel--movies__el"><span class="label label--movies">Aktualnie</span><img class="slickCarousel--movies__img" src="./assets/images/moviesImages/anabelle.jpg" alt="Plakat filmu 'Anabelle'"></div>
+      <div class="slickCarousel--movies__el"><span class="label label--movies">Aktualnie</span><img class="slickCarousel--movies__img" src="./assets/images/moviesImages/bodyguardZawodowiec.jpg" alt="Plakat filmu 'Bodyguard Zawodowiec'"></div>
+      <div class="slickCarousel--movies__el"><span class="label label--movies">od 29 wrz 2017</span><img class="slickCarousel--movies__img" src="./assets/images/moviesImages/fantastyczne-zwierzeta.jpg" alt="Plakat filmu 'Fantastyczne-zwierzeta'"></div>
+      <div class="slickCarousel--movies__el"><span class="label label--movies">od 29 wrz 2017</span><img class="slickCarousel--movies__img" src="./assets/images/moviesImages/gangWiewiora.jpg" alt="Plakat filmu 'Gang wiewióra'"></div>
+      <div class="slickCarousel--movies__el"><span class="label label--movies">od 29 wrz 2017</span><img class="slickCarousel--movies__img" src="./assets/images/moviesImages/lotr1.jpg" alt="Plakat filmu 'Łotr 1'"></div>
+      <div class="slickCarousel--movies__el"><span class="label label--movies">od 29 wrz 2017</span><img class="slickCarousel--movies__img" src="./assets/images/moviesImages/mamuskiWychodne.jpg" alt="Plakat filmu 'Mamuśki mają wychodne'"></div>
+      <div class="slickCarousel--movies__el"><span class="label label--movies">od 29 wrz 2017</span><img class="slickCarousel--movies__img" src="./assets/images/moviesImages/mother.jpg" alt="Plakat filmu 'Mother'"></div>
+      <div class="slickCarousel--movies__el"><span class="label label--movies">od 29 wrz 2017</span><img class="slickCarousel--movies__img" src="./assets/images/moviesImages/oCzymSzumiLas.jpg" alt="Plakat filmu 'O czym szumi las'"></div>
+      <div class="slickCarousel--movies__el"><span class="label label--movies">od 29 wrz 2017</span><img class="slickCarousel--movies__img" src="./assets/images/moviesImages/vaiana.jpg" alt="Plakat filmu 'Vaiana'"></div>
     </div>
   </section>
 
