--- a/app/index.html
+++ b/app/index.html
@@ -162,7 +162,7 @@
 <section class="movies wrapper">
     <!-- Aktualnie i wkrótce w kinie -->
     <h1>Filmy</h1>
-    <div class="slickCarousel--movies">
+    <div class="slickCarousel slickCarousel--movies">
       <div class="slickCarousel--movies__el"><span class="label label--movies">Aktualnie</span><img class="slickCarousel--movies__img" src="./assets/images/moviesImages/to.jpg" alt="Plakat filmu 'To'"></div>
       <div class="slickCarousel--movies__el"><span class="label label--movies">Aktualnie</span><img class="slickCarousel--movies__img" src="./assets/images/moviesImages/anabelle.jpg" alt="Plakat filmu 'Anabelle'"></div>
       <div class="slickCarousel--movies__el"><span class="label label--movies">Aktualnie</span><img class="slickCarousel--movies__img" src="./assets/images/moviesImages/bodyguardZawodowiec.jpg" alt="Plakat filmu 'Bodyguard Zawodowiec'"></div>
@@ -176,8 +176,19 @@
     </div>
   </section>
 
-<section class="promocje wrapper">
+<section class="promotions wrapper">
   <h1>Promocje kinowe</h1>
+
+  <div class="gallery gallery--line">
+    <div class="gallery__el"><img class="gallery__img" src="./assets/images/promotionsImages/plakat-01.jpg" alt="Tania środa. W każdą środę bilet za 11 zł"></div>
+    <div class="gallery__el"><img class="gallery__img" src="./assets/images/promotionsImages/plakat-02.jpg" alt="Kino w spódnicy. Raz w miesiącu. Bilet za 12 zł"></div>
+    <div class="gallery__el"><img class="gallery__img" src="./assets/images/promotionsImages/plakat-03.jpg" alt="Kino seniora. Raz w miesiącu. Bilet za 10 zł"></div>
+    <div class="gallery__el"><img class="gallery__img" src="./assets/images/promotionsImages/plakat-04.jpg" alt="Seans Kinomaniaka. Raz w miesiącu. Bilet za 10 zł"></div>
+    <div class="gallery__el"><img class="gallery__img" src="./assets/images/promotionsImages/plakat-05.jpg" alt="Niedzielne poranki. W niedziele o godz. 11, bilet 12zł"></div>
+    <div class="gallery__el"><img class="gallery__img" src="./assets/images/promotionsImages/plakat-06.jpg" alt="Rodzina chodzi do kina. 20% zniżki z Oławską Kartą Dużej Rodziny"></div>
+    <div class="gallery__el"><img class="gallery__img" src="./assets/images/promotionsImages/plakat-07.jpg" alt="Seanse z figlorajem"></div>
+    
+  </div>
   
 </section>
 
